ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nycopendata-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
  - host: mlflow.skdesk.home
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mlflow-service
            port:
              number: 80
  - host: flask.skdesk.home
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: flask-service
            port:
              number: 80
